--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <header>
     <img src="signature.png" alt="Travel Signature Logo" class="logo">
-    <h1>Welcome to Beautiful Travel!</h1>
+    <h1>Your Travel Experts!</h1>
   </header>
   <main>
     <section class="destination">
